<resources>
    <string name="app_name">DOGY</string>
    <string name="order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="cards">Cards</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_up_to_get_started_and_experience_n_great_shopping_deals">Sign up to get started and experience \n great shopping deals</string>

    <string-array name="time">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="next">Next</string>

    <string name="date_format">MMMM dd</string>
    <string name="address">Address</string>


    <string name="facebook_app_id">311122767704291</string>
    <string name="fb_login_protocol_scheme">fb311122767704291</string>
    <string name="facebook_client_token">2b030954c8cde2dc0027a8f5b348c705</string>


    <string-array name="governorates">

        <item>Choose a governorate</item>

        <item>Tunis</item>
        <item>Ariana</item>
        <item>Ben Arous</item>
        <item>Mannouba</item>

        <item>Bizerte</item>
        <item>Nabeul</item>
        <item>Béja</item>
        <item>Jendouba</item>
        <item>Zaghouan</item>
        <item>Siliana</item>
        <item>Le Kef</item>
        <item>Sousse</item>
        <item>Monastir</item>
        <item>Mahdia</item>

        <item>Kasserine</item>
        <item>Sidi Bouzid</item>
        <item>Kairouan</item>
        <item>Gafsa</item>
        <item>Sfax</item>
        <item>Gabès</item>
        <item>Médenine</item>
        <item>Tozeur</item>
        <item>Kebili</item>
        <item>Ttataouine</item>

    </string-array>


    <string-array name="specialty">

        <item>Choose a Specialty</item>
        <item>Training</item>
        <item>Pet Hotel</item>
        <item>Veterinary</item>

    </string-array>



</resources>